// PACKAGE
package modele.classe;

/**
 * Enumeration Statut, permet de definir le statut d'une classe
 */
public enum Statut {
    PUBLIC,
    PRIVATE,
    PROTECTED
}
