// PACKAGE
package modele.classe;

/**
 * Enumeration TypeClasse, permet de definir le type de classe qu'on cree
 */
public enum TypeClasse {
    CLASSE,
    INTERFACE,
    ENUM,
    ABSTRACT
}
