package vue;

import modele.Sujet;

public class VueDiagramme implements Observateur{

	@Override
	public void actualiser(Sujet sujet) {
		// TODO Auto-generated method stub
		
	}

}
